--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
             #he12 {
                 color: blue !important;
             }
+               @media only screen and (min-width: 992px) {
+                #img123 {
+                    display: none;
+                }
+            }
         </style>
         <div id="parallax" class="header-content d-flex align-items-center backImage">
 
@@ -195,7 +200,15 @@
             color: seagreen;
         }
     </style>
-
+ <section id="img123" class="about-area pt-125 pb-130">
+        <div class="container">
+            <div class="col-lg-6 offset-xl-1">
+                <div class="header-image ">
+                    <img src="assets/images/banner/hero.jpg" alt="hero">
+                </div> <!-- header image -->
+            </div>
+        </div>
+    </section>
     <section id="about" class="about-area pt-125 pb-130">
         <div class="container">
             <div class="row justify-content-center">
